<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.proapp.JobDetailsActivity">
    <item
        android:id="@+id/action_favorite"
        android:orderInCategory="100"
        android:title="@string/favorite"
        android:icon="@drawable/ic_baseline_favorite_24"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="101"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_mail"
        android:orderInCategory="102"
        android:title="@string/send_mail"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_baseline_send_24"
        />
</menu>